getFirst() replaced by get(0) in GanttController.java